...
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C0w-mM-89F">
                                                    <rect key="frame" x="306" y="23" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="favourite"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="GwC-Ar-dSc"/>
                                                        <constraint firstAttribute="width" constant="44" id="UhO-1I-73C"/>
                                                    </constraints>
                                                    <state key="normal" image="Favourite-disable"/>
                                                    <state key="selected" image="Favourite-enable"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                                                <state key="normal" image="mail"/>
                                                <connections>
                                                    <action selector="didTapEmail:" destination="Ffg-me-yr5" eventType="touchUpInside" id="m5Y-n0-NJv"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlG-LS-ihP">
                                                <rect key="frame" x="0.0" y="40" width="32" height="16"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="mobile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bV5-R9-SZC">
                                <rect key="frame" x="16" y="363.5" width="51.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="628-vV-puO">
...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="1" id="Vrn-QT-R3p"/>
                                                </constraints>
                                            </view>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1xs-LH-X05">
                                                <rect key="frame" x="108" y="218.5" width="259" height="51"/>
                                                <accessibility key="accessibilityConfiguration" identifier="firstName"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Hn-g0-3Pp">
                                                <rect key="frame" x="108" y="275.5" width="259" height="41.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="lastName"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uBw-uX-rPW">
                                                <rect key="frame" x="108" y="328" width="259" height="41"/>
...
